# ToodlesDiscordBot

./: Cargo.toml
migrations/: 20250702224018_create_chat_messages.sql  20250703042256_create_user_interaction.sql  20250703044101_alter_user_interaction.sql  20250706060623_add_neutral_interaction_column.sql
src/: ai.rs  chat_hisotry_store.rs  handlers.rs  main.rs  models.rs
src/handlers/: discord.rs  handle_message.rs  mod.rs
src/models/: chat_history.rs  mod.rs  user_interaction.rs
src/store/: chat_hisotry_store.rs  mod.rs  user_interaction_store.rs
