[package]
name = "toodle_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.29.0"
dotenv = "0.15.0"
serenity = "0.12.4"
tokio = { version = "1.21.2", features = ["full"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls"] }
async-trait = "0.1.88"
chrono = "0.4.41"
